# reproducipy

./: .gitignore  README.md  pyproject.toml  reproduci.py
reproduci/: __init__.py  main.py  slurm.py
