[tool.poetry]
name = "reproduci"
version = "0.1.0"
description = "Companion project to github.com/gastrovec/reproduci"
authors = ["L3viathan <git@l3vi.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
