[tool.poetry]
name = "reproduci"
version = "0.6.0"
description = "Companion project to github.com/gastrovec/reproduci"
authors = ["L3viathan <git@l3vi.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.poetry.scripts]
reproduci = "reproduci.main:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
